--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,14 @@
           </div>
         </div>
         <div class="row">
+          <div class="col-12 col-lg-6">
+            <app-trainingvideosection
+              [videoTitle]="videos[4].title"
+              [videoUrl]="videos[4].url"
+            ></app-trainingvideosection>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-lg-7">
             <app-selectedimagesection
               [detalizationProperty]="detalizationProperty"
