--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -6,4 +6,21 @@
   <p class="my-0 text-dark">
     Telegram Канал: <strong>@hyperphase</strong>
   </p>
+  <!--
+10/12 11:24:37 пepлинкa не розумію нащо ти обрав сни. я аналізувала всі наукові статті і дані в книжках про сни. всі це вважають "забавкою" яка не дає ніякого розвитку і швидко набридає. і цій темі відводять найменше значення
+10/12 11:26:34 Эхо>пepлинкa як каже Маск - "там де весь свід думає одне, а ти - інше, і твоя думка основана на ресьорчі а їхня на пофігізмі - і є основний потенціал для розвитку бізнес-можливості".
+10/12 11:27:03 Эхо>пepлинкa мені цікаво той факт, що у сні я можу переспати з будь якою акторкою. цікавий факт що зробивши там річ якої боюся я можу назавжди втратити свою фобію наприклад. це дуже класна терапія, саморозвиток, зняття лімітів.
+10/12 11:27:03 пepлинкa
+10/12 11:28:14 пepлинкa я не критикую. в мене своє субєктивне якесь відношення.. байдуже тепер до снів. чомусь. тому цікаво чому ти так за них вхопився
+10/12 11:31:01 Эхо>пepлинкa ну, наприклад знайшовши три компонента (панорамність, деталізацію, зменшення бажання змінити) я це розглянув як три компонента вивчення якоїсь теми. і один з видів карт то вивчити наскільки широка тема, вивчити деталі, а потім глянути що я хотів би в ній поміняти.
+10/12 11:31:19 Эхо>пepлинкa і завдяки цьому я знаю куди рухатись в питанні яке дуже нове для мене.
+10/12 11:31:50 Эхо>пepлинкa тобто прікольно знати як працює свідомість. і прікольно мати можливості про які роками мріяв і ніколи не будеш мати і можна туда зайти і їх отримати і піти далі по життю.
+10/12 11:32:01 Эхо>пepлинкa забавки то теж важливі речі)
+10/12 11:32:38 Эхо>пepлинкa дитині коли купляють конструктор вона вивчає як воно - щось збирати-розбирати, і стає інженером.
+10/12 11:33:39 Эхо>пepлинкa і водіїв коли навчають то перше що ро6лять це сажають за віртуальний симулятор (тринажер віртуальної реальності - комп`ютер з рульом). тут той самий принцип - щоб кудась дійти треба попробувати це зробити. то один зі способів теоретичного використання.
+10/12 11:34:16 Эхо>пepлинкa але насправді найбільше що мене цікавить то зняття психологічних бар`єрів, блоків, зациклень. раз ввійшов, побачив максимум, проснувся і більше не мрієш про то.
+10/12 11:35:20 Эхо>пepлинкa або мрієш (розумієш що "так, це дійсно твоє") як було в мене з цією фірмою - модель якої я побачив у сні до того як прийшов до них на співбесіду. я чітко розумів "що моє що не моє" і тому не мусів жити з хибним уявленням що того що "моє" в світі програмування не існує.
+10/12 11:55:42 пepлинкa в такому ракурсі (зняття психологічних бар`єрів) чи підготовки до реальності, перетравлюючи пережиті там емоції - то це дійсно корисна річ і цікава
+10/12 11:59:44 Эхо>пepлинкa саме зациклень я б сказав. бо є такі бар`єри які по своїй суті зациклення (як в мене з німецькою було - не хочу не буду бо нав`язують, а потім поговорив там один раз і як прорвало, і заговорив бо зняв на секунду всі свої причини відмовлятись, бо знати мову то прікольно в принципі)
+  -->
 </div>
