--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -95,6 +95,17 @@
         </div>
         <div class="row">
           <div class="col-lg-12 mb-4">
+            <app-instructionssection></app-instructionssection>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 mb-4">
+            <app-hyperphaseinstructionssection></app-hyperphaseinstructionssection>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 mb-4">
             <app-selecttechniquesection
               [techniques]="techniques"
               [selectedTechniqueIndex]="selectedTechniqueIndex"
