--- a/src/app/selectedimagesection/selectedimagesection.component.html
+++ b/src/app/selectedimagesection/selectedimagesection.component.html
@@ -1,11 +1,20 @@
 <div class="card shadow mb-4" id="selectedImageDemo">
-  <div class="card-header align-items-center">
+  <div class="card-header d-flex justify-content-between align-items-center">
     <h6 class="text-primary fw-bold m-0">Картинка</h6>
+
+    <div class="dropdown no-arrow">
+      <button class="btn btn-link btn-sm dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button">
+        <i class="fas fa-ellipsis-v text-gray-400"></i>
+      </button>
+      <div class="dropdown-menu shadow dropdown-menu-end animated--fade-in">
+        <a class="dropdown-item" href="#page-top">&nbsp;Записаться на курс</a>
+      </div>
+    </div>
+  </div>
+  <div class="card-body">
     <p class="my-0" *ngIf="selectedTechniqueIndex != 0">
       Демонстрация ожидаемого эффекта от техники <strong>{{selectedTechniqueName()}}</strong>
     </p>
-  </div>
-  <div class="card-body">
     <canvas class="w-100" #myCanvas > </canvas>
   </div>
 </div>
