--- a/src/app/trainingvideosection/trainingvideosection.component.html
+++ b/src/app/trainingvideosection/trainingvideosection.component.html
@@ -6,11 +6,7 @@
         <i class="fas fa-ellipsis-v text-gray-400"></i>
       </button>
       <div class="dropdown-menu shadow dropdown-menu-end animated--fade-in">
-        <p class="text-center dropdown-header">dropdown header:</p>
-        <a class="dropdown-item" href="#">&nbsp;Action</a>
-        <a class="dropdown-item" href="#">&nbsp;Another action</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">&nbsp;Something else here</a>
+        <a class="dropdown-item" href="#page-top">&nbsp;Записаться на курс</a>
       </div>
     </div>
   </div>
