--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,5 +1,8 @@
 <div class="hero-training">
-  <h6 class="text-primary fw-bold m-0">Запись на Курсы или Консультацию</h6>
+  <h6 class="text-primary fw-bold m-0">Запись на Обучающую Консультацию</h6>
+  <h6 class="text-primary fw-bold m-0">Цена обучающей консультации: $80</h6>
+  <h6 class="text-primary fw-bold m-0">Что значительно выгоднее и быстрее чем проходить полный курс</h6>
+  <h6 class="text-primary fw-bold m-0">Так как много теории вы уже знаете, а моё дело - вас направить</h6>
   <p class="my-0 text-dark">
     Viber: <strong>+380660942421</strong>
   </p>
