--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,13 +1,23 @@
 <div class="hero-training">
-  <h6 class="text-primary fw-bold m-0">Запись на Обучающую Консультацию</h6>
-  <h6 class="text-primary fw-bold m-0">Цена обучающей консультации: $80</h6>
-  <h6 class="text-primary fw-bold m-0">Что значительно выгоднее и быстрее чем проходить полный курс</h6>
-  <h6 class="text-primary fw-bold m-0">Так как много теории вы уже знаете, а моё дело - вас направить</h6>
+  <h6 class="text-primary fw-bold m-0">Групповые занятия.</h6>
+  <h6 class="text-primary fw-bold m-0">Индивидуальные занятия.</h6>
+  <h6 class="text-primary fw-bold m-0">Подписывайтесь в Телеграм Канал</h6>
+  <h6 class="text-primary fw-bold m-0">чтобы узнать когда следующий курс или задать вопрос:</h6>
   <p class="my-0 text-dark">
-    Viber: <strong>+380660942421</strong>
+    <strong>@hyperphase</strong>
   </p>
+  <h6 class="text-primary fw-bold m-0">Консультация по телефону - $80</h6>
+  <h6 class="text-primary fw-bold m-0">Viber для консультаций:</h6>
   <p class="my-0 text-dark">
-    Telegram Канал: <strong>@hyperphase</strong>
+    <strong>+380660942421</strong>
+  </p>
+  <h6 class="text-primary fw-bold m-0">Следите за нашими публикациями в Reddit:</h6>
+  <p class="my-0 text-dark">
+    <strong><a target="blank" href="https://www.reddit.com/user/diamondserge/submitted/">Наш международный канал обучения в Reddit</a></strong>
+  </p>
+  <h6 class="text-primary fw-bold m-0">Спонсируйте нашу психологическую помощь военным и пострадавшим:</h6>
+  <p class="my-0 text-dark">
+    <strong><a target="blank" href="https://send.monobank.ua/jar/6XMHeRkA3e">Монобанка</a></strong>
   </p>
   <!--
 10/12 11:24:37 пepлинкa не розумію нащо ти обрав сни. я аналізувала всі наукові статті і дані в книжках про сни. всі це вважають "забавкою" яка не дає ніякого розвитку і швидко набридає. і цій темі відводять найменше значення
