--- a/src/app/header-tab/header-tab.component.html
+++ b/src/app/header-tab/header-tab.component.html
@@ -1,6 +1,7 @@
 <div [ngClass]="{ 'carousel-item' : true, 'active': isActive }" >
   <div class="bg-light border rounded border-light pulse animated {{tab.backgroundClass}} carousel-hero jumbotron py-5 px-4">
     <h1 class="hero-title">{{ tab.name }}</h1>
+    <h1 class="hero-title">{{ tab.name2 }}</h1>
     <p class="hero-subtitle">{{ tab.description }}</p>
     <!-- p>
       <a class="btn btn-primary hero-button plat m-1" role="button" href="https://patreon.com/vinogradoff_group_tip_jar">Стать Спонсором</a>
