--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -7,7 +7,7 @@
   <p class="my-0 text-dark">
     <strong>@hyperphase</strong>
   </p>
-  <h6 class="text-primary fw-bold m-0">Консультация по телефону - $80</h6>
+  <h6 class="text-primary fw-bold m-0">Консультация по телефону или в Zoom - $80</h6>
   <h6 class="text-primary fw-bold m-0">Viber для консультаций:</h6>
   <p class="my-0 text-dark">
     <strong>+380660942421</strong>
