--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,24 +1,16 @@
 <div class="hero-training">
-  <h6 class="text-primary fw-bold m-0">Групповые занятия.</h6>
-  <h6 class="text-primary fw-bold m-0">Индивидуальные занятия.</h6>
-  <br/>
-  <h6 class="text-primary fw-bold m-0">Подписывайтесь в Телеграм Канал</h6>
-  <h6 class="text-primary fw-bold m-0">чтобы узнать когда следующий курс или задать вопрос:</h6>
+  <h6 class="text-primary fw-bold m-0">Наша научная работа (наша теория, по которой мы учим):</h6>
+  <p class="my-0 text-dark">
+    <strong><a target="blank" href="https://drive.google.com/file/d/1A4aMIJxmqhI3VwHVSAXOGYoQV3eeQrrH/view?usp=sharing">Скачать теорию которую мы создали</a></strong>
+  </p>
+
+  <h6 class="text-primary fw-bold m-0">Запись на консультацию в Телеграм Канал</h6>
   <p class="my-0 text-dark">
     <strong>@hyperphase</strong>
   </p>
-  <h6 class="text-primary fw-bold m-0">Консультация по телефону или в Zoom - $80</h6>
-  <h6 class="text-primary fw-bold m-0">Viber для консультаций:</h6>
-  <p class="my-0 text-dark">
-    <strong>+380660942421</strong>
-  </p>
-  <h6 class="text-primary fw-bold m-0">Следите за нашими публикациями в Reddit:</h6>
+  <h6 class="text-primary fw-bold m-0">Наши новости в Reddit:</h6>
   <p class="my-0 text-dark">
     <strong><a target="blank" href="https://www.reddit.com/user/diamondserge/submitted/">Наш международный канал обучения в Reddit</a></strong>
-  </p>
-  <h6 class="text-primary fw-bold m-0">Спонсируйте нашу психологическую помощь военным и пострадавшим:</h6>
-  <p class="my-0 text-dark">
-    <strong><a target="blank" href="https://send.monobank.ua/jar/6XMHeRkA3e">Монобанка</a></strong>
   </p>
   <!--
 10/12 11:24:37 пepлинкa не розумію нащо ти обрав сни. я аналізувала всі наукові статті і дані в книжках про сни. всі це вважають "забавкою" яка не дає ніякого розвитку і швидко набридає. і цій темі відводять найменше значення
